--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,6 @@ dependencies:
   shelf_rpc: "^0.0.3+2"
   shelf_route: ">0.13.0"
   logging_handlers: "^0.8.0"
- # test: ">0.12"
+  test: "^0.12.5+1"
 
 
