--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   rpc: "^0.5.3"
   shelf_rpc: "^0.0.3+2"
   shelf_route: ">0.13.0"
+  shelf_auth: "^0.7.0"
   logging_handlers: "^0.8.0"
   test: "^0.12.5+1"
   
