--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   shelf_route: ">0.13.0"
   shelf_auth: "^0.7.0"
   logging_handlers: "^0.8.0"
+  shelf_exception_handler: "^0.1.0"
+  option: "^1.1.0"
   test: "^0.12.5+1"
   
 
