--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   option: "^1.1.0"
   test: "^0.12.5+1"
   uuid: "0.5.0"
+  hammock: "^0.4.0"
 transformers:
 - angular:
     html_files:
