--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   angular: any
   angular_ui: any
-  web_components: "0.10.1"
+#  web_components: any
   browser: any
   objectory:
       git:
