--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,8 @@ dependencies:
   rpc: "^0.5.5"
   shelf_rpc: "^0.0.3+2"
   shelf_route: ">0.13.0"
-  shelf_auth: "^0.7.0"
-  shelf_cors: "^0.2.1"
+  shelf_auth: ">=0.7.0"
+  shelf_cors: ">=0.2.1"
   logging_handlers: "^0.8.0"
   shelf_exception_handler: "^0.1.0"
   option: "^1.1.0"
@@ -31,11 +31,21 @@ dependencies:
   uuid: "0.5.0"
   hammock: "^0.4.0"
 transformers:
-- $dart2js:
-    environment:
-      mode: javascript
 - angular:
     html_files:
       - web/pages/home.html
       - web/pages/main_page.html
+      - web/lib/components/add_artifact.html
+      - web/lib/components/application_create.html
+      - web/lib/components/application_detail.html
+      - web/lib/components/application_edition.html
+      - web/lib/components/application_list.html
+      - web/lib/components/application_version.html
+      - web/lib/components/artifact.html
+      - web/lib/components/user_login.html
+      - web/lib/components/user_register.html
+- $dart2js:
+    environment:
+      mode: javascript
+
 
