--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   test: "^0.12.5+1"
   uuid: "0.5.0"
   hammock: "^0.4.0"
+  googleapis_auth: any
+  googleapis: any
 transformers:
 - angular:
     html_files:
