--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   googleapis_auth: any
   googleapis: any
 dependency_overrides:
-  rpc:
-    path: "../rpc/"
+  #rpc:
+  #  path: "../rpc/"
   #  git:
   #    url: git://github.com/rgroult/rpc.git
    #   ref: master
