--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   shelf_cors: ">=0.2.1"
   logging_handlers: "^0.8.0"
   shelf_exception_handler: "^0.1.0"
+  archive: "^1.0.20"
+  plist: "^1.0.1"
   option: "^1.1.0"
   test: "^0.12.5+1"
   uuid: "0.5.0"
