MobDistTool - Apk analyzer (bug fixed and apk_parser: "^0.0.2+2" added tu the project)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: '>=1.0.0 <2.0.0'
 
 dependencies:
+  apk_parser: "^0.0.2+2"
   angular: any
   angular_ui: any
 #  web_components: any
