update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ services:
 cache:
   directories:
   - $HOME/.pub-cache
-script: test/all_core_tests.dart
-script: test/all_rpc_tests.dart
+script: test/allTests.dart
