--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,9 @@ dependencies:
         ref: master
   args: '>=0.10.0 <0.14.0'
   shelf: '>=0.6.0 <0.7.0'
-  rpc: "^0.5.5"
+  rpc: "^0.5.6"
   shelf_rpc: "^0.0.3+2"
-  shelf_route: ">0.13.0"
+  shelf_route: ">0.13.1"
   shelf_auth: ">=0.7.0"
   shelf_cors: ">=0.2.1"
   crypto: "^0.9.1"
@@ -40,7 +40,7 @@ dependencies:
   option: "^1.1.0"
   test: "^0.12.5+1"
   uuid: "0.5.0"
-  hammock: "^0.4.0"
+  #hammock: "^0.4.0"
   googleapis_auth: any
   googleapis: any
   qr:
