--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   googleapis: any
   qr:
      git: git://github.com/rgroult/qr.dart.git
+  xcvbnm: "^0.5.0"
 dependency_overrides:
 transformers:
 - angular:
