--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
         ref: master
   apk_parser: "^0.0.2+2"
   browser: any
-
-  angular_ui: any  # conflict on newer SDK
+  angular: any
+  angular_ui: any
   objectory:
       git:
         url: git://github.com/vadimtsushko/objectory.git
@@ -45,11 +45,13 @@ dev_dependencies:
   args: '>=0.10.0 <0.14.0'
   test: "^0.12.5+1"
 dependency_overrides:
+  analyzer: '>=0.27.0 <=0.27.3' # Forced for angular dependancies
+  collection: '^1.9.0' # Forced for angular dependancies
   args: '^0.13.2'
   mongo_dart: "0.2.9"
   uri: "^0.11.0" # conflict between rpc and shelf_route
-  angular:
-      path: ../angular.dart-master
+  #angular:
+ #     path: ../angular.dart-master
   #angular: "^1.1.2+2" # old Version incompatible with newer SDK ...
 transformers:
 - angular:
