--- a/web_angular2/pubspec.yaml
+++ b/web_angular2/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   angular2_components:
   http: ^0.11.0
   stream_transformers: ^0.3.0
+  validator: ">=0.0.4 <0.1.0"
  # bootjack: any
  # modal_dialog:
 dev_dependencies:
