continue angular 2 refactoring

--- a/web_angular2/pubspec.yaml
+++ b/web_angular2/pubspec.yaml
@@ -10,11 +10,13 @@ dependencies:
   http: ^0.11.0
   stream_transformers: ^0.3.0
   validator: ">=0.0.4 <0.1.0"
+  qr:
+    git: git://github.com/rgroult/qr.dart.git
  # bootjack: any
  # modal_dialog:
 dev_dependencies:
   browser: ^0.10.0
-  dart_to_js_script_rewriter: ^1.0.1
+  dart_to_js_script_rewriter:
 transformers:
 - angular2:
     platform_directives:
@@ -25,5 +27,6 @@ transformers:
     resolved_identifiers:
             BrowserClient: 'package:http/browser_client.dart'
             Client: 'package:http/http.dart'
+            ModalService: 'lib/services/modal_service.dart'
 - dart_to_js_script_rewriter
 
