--- a/web_angular2/pubspec.yaml
+++ b/web_angular2/pubspec.yaml
@@ -15,9 +15,14 @@ dependencies:
  # bootjack: any
  # modal_dialog:
 dev_dependencies:
+  dart_sass_transformer: any
   browser: ^0.10.0
   dart_to_js_script_rewriter:
 transformers:
+- dart_sass_transformer:
+    compass: false                 # Include compass
+    line-numbers: true            # Include line numbers in output
+    style: compact                # Style of generated CSS
 - angular2:
     platform_directives:
     - 'package:angular2/common.dart#COMMON_DIRECTIVES'
