--- a/web_angular2/pubspec.yaml
+++ b/web_angular2/pubspec.yaml
@@ -1,4 +1,4 @@
-name: 'MobDistTool'
+name: 'MobDistTool_Angular_2_Web_UI'
 version: '1.2.0'
 description: Platform which allows to distribute applications to beta testers (IOS, Android).
 
