update ready and docker sample

--- a/docker_sample.yaml
+++ b/docker_sample.yaml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     mdt:
-        image: "rgroult2/mobdisttool:latest"
+        image: "rgroult2/mobdisttool:stable"
         ports:
             - "8080:8080"
         environment:
