add columns in users administration

--- a/web_angular2/pubspec.yaml
+++ b/web_angular2/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   validator: ">=0.0.4 <0.1.0"
   qr:
     git: git://github.com/rgroult/qr.dart.git
+  intl:
  # bootjack: any
  # modal_dialog:
 dev_dependencies:
