--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     git:
         url: git://github.com/codecov/dart.git
         ref: master
-  apk_parser: "^0.0.2+2"
+ # apk_parser: "^0.0.2+2"
 #  browser: any
 #  angular: any
  # angular_ui: any
